# rss_feed_reader

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
rss_feed_reader/: __main__.py  feed_reader.py  main.py
templates/: form.html
tests/: test_feed_reader.py  test_rss_feed_reader.py  test_valid_feed.xml
