[tool.poetry]
name = "rss_feed_reader"
version = "0.1.0"
description = ""
authors = ["mvictoria <micah.victoria@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.12.0"
feedparser = "^6.0.10"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
ruff = "^0.0.237"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
