[tool.poetry]
name = "rss_feed_reader"
version = "0.1.0"
description = ""
authors = ["mvictoria <micah.victoria@gmail.com>"]

[tool.poetry.scripts]
rss_feed_reader = "rss_feed_reader.feed_reader:main"

[tool.poetry.dependencies]
python = "^3.8"
feedparser = "^6.0.10"
click = "^8.1.3"
fastapi = {extras = ["uvicorn"], version = "^0.95.0"}
uvicorn = "^0.21.1"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
ruff = "^0.0.237"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
